Avoid sidescroll on small screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -150,3 +150,9 @@ dialog {
     display: none !important;
   }
 }
+
+@media screen and (max-width: 579px) {
+  .mobile-hidden {
+    display: none !important;
+  }
+}
